changelog
2.2.2
	- Using URL provided by the API
	- New icon for the panel
2.2.3
    - Don't show a notification when the focussed tab is the streampage
    - Update panel even if the focussed tab is the channelpage
2.2.4
    - refresh button in panel
    - 0 means no automatic refresh
2.2.5
    - Widget tooltip change depending on the number of livestreams.
    - fixed not iterable tabs
2.3
    - Fixed refresh button not working
    - Links not underlined in panel
    - Fixed button tooltip
    - No scrollbar in panel for long streamnames
    - Don't hide refresh button when no channel is online
    - add notifications for title change
    - add offline notifications
    - add configuration for notifications
    - fixed favorites fetching
    - fixed removing channels in some cases
    - properly catching most of the errors
2.3.1
    - Corrected some error response handling
2.4
    - Update and First run infopages
    - Ignore spaces in username lists
2.5
    - Use local storage
    - Minor speed-ups
    - Fixed new Twitch channel pages not being recognized
2.6
    - Open archive page for offline channels
    - Offline channels can be shown in panel
    - Only one request per channel is sent a time
    - Disable dragging and highlighting in the panel
2.6.1
    - Fetching all favorites of a user
    - Better request retrying behaviour
    - Fixed sometimes channels not getting removed from panel
2.6.2
    - Fix startup panel & event initialization
2.6.3
    - Advanced network & API error handling
    - Added scrollbar to panel if needed
    - Fixed channel removing for some edge cases