@@ -249,7 +249,7 @@ exports.getLoginName = function() {
             url: 'http://www.justin.tv',
             onComplete: function(credentials) {
                 credentials.forEach(function(credential) {
-                    exports.checkRateLimit(new Source(Source.TYPE_CREDENTIAL,credential.username,{'page':0}),exports.getUserFavorites,false);
+                    exports.checkRateLimit(new Source(Source.TYPE_CREDENTIALS,credential.username,{'page':0}),exports.getUserFavorites,false);
                 });
             }
          });
@@ -257,7 +257,7 @@ exports.getLoginName = function() {
             url: 'http://www.twitch.tv',
             onComplete: function(credentials) {
                 credentials.forEach(function(credential) {
-                    exports.checkRateLimit(new Source(Source.TYPE_CREDENTIAL,credential.username,{'page':0}),exports.getUserFavorites,false);
+                    exports.checkRateLimit(new Source(Source.TYPE_CREDENTIALS,credential.username,{'page':0}),exports.getUserFavorites,false);
                 });
             }
          });
@@ -490,6 +490,7 @@ exports.uncheckTab = function(tab) {
     }
 };
 
+// Possibly migrate this to channelList
 exports.liveStatus = function() {
     if(data.channels!={}&&data.channels.length>0) {
         for(channel in data.channels) {
@@ -527,6 +528,7 @@ Channel.prototype.login="";
 Channel.prototype.sources=null;
 Channel.prototype.image=[];
 Channel.prototype.status=0;
+//Channel.prototype.type = "";
 
 Channel.QUEUED = 0;
 Channel.FULL = 1;
@@ -576,7 +578,7 @@ Channel.prototype.getArchiveUrl = function(index) {
 
 
 /*
-    channel List
+    ChannelList Object
 */
 
 ChannelList.prototype.channels = [];
@@ -754,11 +756,15 @@ Sources.prototype.getFirstSourceObject = function(c) {
     }
 }
 
+/*
+    Source Object
+    contains information about the origin of a channel and also additional information for the request
+*/
 
 Source.prototype.type = "";
 Source.prototype.name = "";
 Source.TYPE_USENRAME = 'username';
-Source.TYPE_CREDNETIALS = 'credentials';
+Source.TYPE_CREDENTIALS = 'credentials';
 Source.TYPE_USER = 'user';
 function Source(type,channelName,options) {
     this.type = type;
